2008-11-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (DEVPREFIX) [cygwin]: restore the definition lost on
	2005-08-29

2008-11-11  Sam Steingold  <sds@gnu.org>

	* cfgsunux.lisp: remove file (suntools users can set *EDITOR*)
	* makemake.in (CONFIG): set to cfg${TOS}

2008-11-09  Sam Steingold  <sds@gnu.org>

	* eval.d (reset): avoid a warning in fprintf

2008-11-09  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): run *INIT-HOOKS* after initializing O(argv) so
	that the application can detect --clisp- options and remove setuid
	http://clisp.podval.org/impnotes/image.html#image-exec

2008-11-09  Sam Steingold  <sds@gnu.org>

	* savemem.lisp (saveinitmem): when given an explicit
	:INIT-FUNCTION NIL, reset *DRIVER* to #'SYS::MAIN-LOOP
	* init.lisp: load savemem.lisp after reploop.lisp
	* spvw.d (usage): update REPL recover instructions: :INIT-FUNCTION NIL
	instead of :INIT-FUNCTION (FUNCTION SYS::MAIN-LOOP)

2008-11-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (EVENTS-QUEUED): add (call XEventsQueued)
	* modules/clx/new-clx/clx.lisp (EVENTS-QUEUED): export

2008-11-08  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (SOCKADDR-FAMILY):
	return family as a keyword

2008-11-08  Sam Steingold  <sds@gnu.org>

	* predtype.d (with_gc_statistics): avoid a format argument type
	mismatch warning

2008-11-08  Sam Steingold  <sds@gnu.org>

	* errunix.d (errno_out_low): avoid
	"warning: format not a string literal and no format arguments"

2008-11-07  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:OPEN-DISPLAY): fix the signature
	and a segfault in (XLIB:OPEN-DISPLAY NIL); use grasp()
	(DISPLAY-AUTHORIZATION): move STACK_to_mv past X_CALL
	(CREATE-WINDOW): use macro SLOT
	(get_event_mask): define as check_event_mask_of_list
	(make_event_mask): define as make_uint32
	(CREATE-PIXMAP, PROCESS-EVENT): use error_required_keywords()
	instead of NOTIMPLEMENTED
	(SEND-EVENT): fix the signature and use grasp()
	(dpy_wait): add